[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lowbit"
version = "0.1.0"
description = "A Python library for solving optimization problems using Quadratic Unconstrained Binary Optimization (QUBO) with probabilistic Ising machines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["lowbit"]

[tool.hatch.build.targets.sdist]
include = [
    "/lowbit",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
